2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoff.

        Fix the build -- r31492 removed activation tear-off, but r31493 used it.

        * kjs/nodes.cpp:
        (KJS::FuncExprNode::makeFunction):

2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Add support for FuncExprNode to SquirrelFish.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeBlock.h:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addConstant):
        (KJS::CodeGenerator::emitNewFunctionExpression):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::FuncExprNode::emitCode):
        (KJS::FuncExprNode::makeFunction):
        * kjs/nodes.h:

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        First step toward global code: removed some obsolete JSGlobalObject
        APIs, changing clients to ASSERT_NOT_REACHED.
        
        Activation tear-off and scope chain pushing is obsolete because we
        statically detect whether an activation + scope node is required.
        
        The variableObject() and activationObject() accessors are obsolete
        because they haven't been maintained, and they're mostly used by
        node evaluation code, anyway.
        
        The localStorage() accessor is obsolete because everything is in
        registers now, and it's mostly used by node evaluation code, anyway.

2008-03-31  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
        
        - implement codegen for bracket accessor and bracket assign

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitGetPropVal):
        (KJS::CodeGenerator::emitPutPropVal):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp: